# lidar-processing

./: README.md
attic/: README
attic/src/: 2010-01-adapt.i  2010-01-batch_elv_clip.i  2010-01-comparison.i  2010-01-eex_bath.i  2010-01-fitpoly.i  2010-01-hist_fns.i  2010-01-scanflatmirror1_direct.i  2010-01-webview.i  2010-02-clean.i  2010-02-struct_to_struct.i  2010-02-write_to_final_arr.i  2010-02-ytriangulate.i  2010-03-add_time_record.i  2010-03-confload.i  2010-03-edf.i  2010-07-ed-eaarl.i  2010-07-jb2.i  2010-08-atm.i  2010-09-batch_multipip_process.i  2010-09-conusqq.i  2010-09-data_rgn_selector.i  2010-09-dataexplore.i  2010-09-ewf.i  2010-09-fillin.i  2010-09-find_bottom.i  2010-09-n43clean.tcl  2010-09-posprh.i  2010-09-processing_dmars.i  2010-09-rascam.tcl  2010-09-read_data_dir.tcl  2010-09-zone.i  2010-10-fit_gauss.i  2010-10-fit_gauss.ytk  2010-10-unittest.i  2010-11-image_load_tool.ytk  2010-11-l1pro-dep.tcl  2012-03-bathy_filter.i  2012-03-bottom_return.i  2012-03-determine_bias.i  2012-03-qaqc_fns.i  (+2 more)
batcher/: Makefile  batcher.tcl  cmdline_batch  initd-batcher.sh  setup_batch.pl  show_tiles.pl
calps/: Makefile  README  calps.i  calps_start.i  centroid.c  constants.h  dir.c  eaarl_decode_fast.c  filebuffer.c  filebuffer.h  geometry.c  interp_angles.c  lines.c  multidata.c  profile.c  profiler.c  set_uniq.c  uniq.c  unique.c  wf_centroid.c
doc/: MultiBatch_How_To.txt  conf_template.conf  gps-file-description.txt  install-alps.html  install-alps.txt  installer-history.txt
idl/: batch_grid.pro  batch_index_grid.pro  batch_plot.pro  batchmaker.pro  define_struc.pro  eaarl_grid_data.prj  ext_rasters.pro  extract_closest_raster.pro  gdf_to_gtiff.pro  grid_eaarl_data.pro  invert_geotiff.pro  jpg_to_gtiff.pro  make_nodata_shp.pro  multibatch.pro  plot_colorbar.pro  plot_xyz_bath.pro  plot_xyz_veg.pro  raster_data.pro  read_ebs.pro  read_ybin.pro  read_yfile.pro  symbol_circle.pro
install/: CMakeLists.txt
install/cctools/: CMakeLists.txt  cctools-patch.cmake.in
install/cmake/: args.cmake  functions.cmake  projects.cmake
install/gdal/: CMakeLists.txt
install/magick/: CMakeLists.txt
install/rlwrap/: CMakeLists.txt
install/share/: CMakeLists.txt
install/tcl/: CMakeLists.txt  tkcon-install.cmake.in
install/utils/: CMakeLists.txt
install/utils/programs/: dmars2iex.c  dmarscat2iex.c  eaarl.h  erange.c  erange1.c  mkidx.c  pnav2ybin.c  pospac2ybin.c  terrapos2ybin.c
install/utils/scripts/: Makefile  check_mission.pl  check_to_archive  clean.awk  comment  geotiffer.pl  get_location.pl  make_xml_metadata.pl  mktrajfiles  pnav2gm.pl  shapefile_filter.pl  show_doc.pl  showdays  test_checksum  vncpl
install/yorick/: CMakeLists.txt  calps-patch.cmake.in
install/yorick/calps/: Makefile  array.c  calps.i  dir.c  eaarl_decode_fast.c  filebuffer.c  filebuffer.h  fs_rx.c  gpbox.c  interp_angles.c  level_short_dips.c  linux.c  ll2utm.c  multidata.h  profiler.c  rle.c  set.c  timsort.c  timsort.h  triangle_y.c
linux-xp/: gm_tiff2ktoqq.tcl  gm_xyz2dem.tcl  gmbatchcrop.tcl  png_retile.tcl  tiles2kml.tcl  worldfile2kml.tcl
linux-xp/circam/: Makefile  Notes
linux-xp/pnav2kml/: cam1.tcl  ins.tcl  pnav2kml.tcl
plugins/eaarla/: autoselect.i  batch_process.i  batch_veg_energy.i  bathy.i  calps_compat.i  centroid.i  class_bathconfobj.i  class_cfconfobj.i  class_chanconfobj.i  class_vegconfobj.i  drast.i  eaarl_constants.i  eaarl_raster.i  eaarla_auto.i  eaarla_auto.tcl  edb_access.i  geo_bath.i  irg.i  job_commands.i  load.i  load.tcl  makeflow_eaarl.i  manifest.json  mission.i  mission_constants.i  mosaic_biases.i  parse.i  pixelwf.i  process_ba.i  process_be.i  process_cf.i  process_fs.i  process_main.i  process_mp.i  process_sb.i  process_util.i  sf.i  surface_topo.i  util_process.i  veg.i  (+1 more)
plugins/eaarlb/: autoselect.i  batch_process.i  bathy.i  calps_compat.i  centroid.i  class_bathconfobj.i  class_cfconfobj.i  class_chanconfobj.i  class_sbconfobj.i  class_vegconfobj.i  drast.i  eaarl_constants.i  eaarl_raster.i  eaarla_auto.i  eaarla_auto.tcl  eaarlb_auto.i  eaarlb_auto.tcl  edb_access.i  geo_bath.i  irg.i  load.i  load.tcl  manifest.json  mission.i  mission_constants.i  mosaic_biases.i  pixelwf.i  process_ba.i  process_be.i  process_cf.i  process_fs.i  process_main.i  process_mp.i  process_sb.i  sasr.i  surface_topo.i  util_mp.i  veg.i  veg_energy.i
programs/: Makefile  dmars.h  dmars2iex.c  dmarscat2iex.c  efdb.c  egaddr.c  erange.c  fix-dos-crlf-ash.c  gga2bin.c  mkidx.c  pnav2ybin.c  pospac2ybin.c  rdmars.c  tans2bin.c  terrapos2ybin.c
python/: pyo.py
python/alps/: convert.py  load.py  site.py
scripts/: Makefile  ascii_rename.pl  check_for_tlds.pl  check_mission.pl  hgr  idx_tiles_summarize  iex_ascii2pbd  initialize_cir.py  make_html_tiles.pl  make_xml_metadata.pl  mkcamlist  mkeidx  mktrajfiles  mvbu.pl  pnav2kml.pl  whatsnew.pl  wrsync
scripts/attic/: checksys  mkdirstruc.tcl  qq_tile_maker.tcl  xyz_metadatascript.tcl
src/: DataRegistration.i  Makefile  adapt.i  add_time_record.i  adf.i  alps  alps_constants.i  alps_data.i  alps_structs.i  alpsrc.i  aoi-correction.i  ascii.i  ascii_encode.i  asciixyz.i  assert.i  atm.i  atris.i  atris.ytk  batch_analysis.i  batch_datum_convert.i  batch_elv_clip.i  batch_multipip_process.i  batch_process.i  batch_retile.i  batch_terraceia_analysis.i  batch_typ_convert.i  batch_veg_energy.i  batcher.tcl  batconvert.i  bathctl.ytk  bathy.i  bathy_filter.i  boat.i  bottom_return.i  calps_compat.i  centroid-1.i  centroid.i  change_window_size.i  check_for_tlds.pl  checksys  (+299 more)
src/attic/: 2010-01-batch_qq2k.i  2010-01-cir-mosaic.i  2010-01-display_fns.i  2010-01-old-plcm.i  2010-01-scanflatmirror1_direct_vector.i  2010-01-scanflatmirror2_direct.i  2010-02-histogram1.i  2010-02-ircf.i  2010-02-photo.i  2010-03-confload.ytk  2010-03-fl1utm2ll.i  2010-03-load_this_edb.i  2010-07-atm.i  2010-07-cir.tcl  2010-07-ed-eaarl.i  2010-07-sf_a.tcl  2010-07-surface_topo.i  2010-08-atm.i  2010-08-hashptr.i  (+22 more)
yorick-extend/: mkrcf.sh  rcf.c  rcf.i  rcfbase1.c  rcfbase2.c  test-rcf.i  triangle.i  triangulate.c  triangulate.i
(+335 files in other folders)
